src/jsMain/resources/styles.css
html {
  --terminal-bg: #121212; /* Pure black causes eye strain */
  --panel-bg: #181818; /* Lighter shade to differentiate */
  --primary: limegreen; /* Used for text */
  --secondary: yellowgreen; /* Used for prompt and divider */
  --tertiary: lime; /* Used for matrix and divider (while resizing) */
  --font-size: 1rem; /* 1rem = 16px */
  --font-family: 'Courier New', Courier, monospace;
  --resizer-width: 4px;
  --panel-width: 40vw;
}

body {
  background-color: var(--terminal-bg);
  font-family: var(--font-family);
  font-size: var(--font-size);
  margin: 0;
  padding-right: calc(var(--panel-width) + var(--resizer-width));
  box-sizing: border-box;
}

.line {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  margin: 0.5rem;

  & input {
    background-color: var(--terminal-bg);
    color: var(--primary);
    font-family: var(--font-family);
    font-size: var(--font-size);
    border: none;
    outline: none;
    flex: 1;
  }
}

span {
  color: var(--secondary);
}

pre {
  color: var(--primary);
  padding: 0 0.5rem;
  margin: 0;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

canvas {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 3;
  transition: opacity 2s ease;
}

#resizer {
  position: fixed;
  top: 0;
  right: var(--panel-width);
  width: var(--resizer-width);
  height: 100vh;
  cursor: col-resize;
  background-color: var(--secondary);
  z-index: 1;
  transition: background-color 0.2s ease;

  &:hover {
    background-color: var(--tertiary);
  }
}

body.resizing {
  cursor: col-resize;
  user-select: none;

  & #resizer {
    background-color: var(--tertiary);
  }
}

#panel {
  position: fixed;
  top: 0;
  right: 0;
  width: var(--panel-width);
  height: 100vh;
  background-color: var(--panel-bg);
  z-index: 1;
}

#curtain {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: var(--terminal-bg);
  z-index: 2;
  opacity: 1;
}

@media (max-width: 1024px) {
  #resizer, #panel {
    display: none;
  }
  body {
    padding-right: 0;
  }
}

@media (max-width: 430px) {
  :root {
    --font-size: 0.875rem;
  }
}

